--- a/ShoppingApp/app/src/main/res/navigation/login_register_graph.xml
+++ b/ShoppingApp/app/src/main/res/navigation/login_register_graph.xml
@@ -30,7 +30,8 @@
         tools:layout="@layout/fragment_register" >
         <action
             android:id="@+id/action_registerFragment_to_loginFragment"
-            app:destination="@id/loginFragment" />
+            app:destination="@id/loginFragment"
+            app:popUpTo="@id/accountOptionsFragment" />
     </fragment>
     <fragment
         android:id="@+id/accountOptionsFragment"
