--- a/ShoppingApp/app/src/main/res/navigation/shopping_graph.xml
+++ b/ShoppingApp/app/src/main/res/navigation/shopping_graph.xml
@@ -43,6 +43,9 @@
         <action
             android:id="@+id/action_profileFragment_to_addressFragment"
             app:destination="@id/addressFragment" />
+        <action
+            android:id="@+id/action_profileFragment_to_userAccountFragment"
+            app:destination="@id/userAccountFragment" />
     </fragment>
     <fragment
         android:id="@+id/productDetailsFragment"
@@ -73,4 +76,9 @@
             android:name="cartProducts"
             app:argType="com.psi.shoppingapp.data.CartProduct[]" />
     </fragment>
+    <fragment
+        android:id="@+id/userAccountFragment"
+        android:name="com.psi.shoppingapp.fragments.user.UserAccountFragment"
+        android:label="fragment_user_account"
+        tools:layout="@layout/fragment_user_account" />
 </navigation>
