--- a/ShoppingApp/app/src/main/res/layout/fragment_address.xml
+++ b/ShoppingApp/app/src/main/res/layout/fragment_address.xml
@@ -204,6 +204,20 @@ tools:context=".fragments.shopping.AddressFragment">
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:visibility="visible" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/buttonUpdate"
+        android:layout_width="0dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginBottom="20dp"
+        android:layout_weight="1"
+        android:background="@drawable/blue_background"
+        android:fontFamily="@font/poppins_thin"
+        android:text="Update"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        android:visibility="gone" />
 </LinearLayout>
 
 <ProgressBar
