--- a/OnlineShopping/app/src/main/res/values/colors.xml
+++ b/OnlineShopping/app/src/main/res/values/colors.xml
@@ -19,8 +19,10 @@
     <color name="g_search_and_icons">#FAFBFC</color>
     <color name="g_line">#E9EAEC</color>
     <color name="g_blue100">#B8D9FA</color>
-    <color name="g_red">#FF0000</color>
+    <color name="g_red">#CB4335</color>
     <color name="g_gray500">#969899</color>
     <color name="g_orange_yellow">#F8BA00</color>
     <color name="g_green">#11FF00</color>
+    <color name="g_gray200"> #F2F3F4</color>
+
 </resources>
