--- a/OnlineShopping/app/src/main/res/layout/rv_product_item.xml
+++ b/OnlineShopping/app/src/main/res/layout/rv_product_item.xml
@@ -1,85 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="230dp"
-    android:layout_height="wrap_content"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardElevation="0dp"
-    app:cardCornerRadius="5dp"
-    app:cardBackgroundColor="@color/g_card_background"
-    app:cardUseCompatPadding="true"
-    >
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="120dp"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <ImageView
+        android:id="@+id/imageProduct"
+        android:layout_width="120dp"
+        android:layout_height="120dp" />
+
+    <TextView
+        android:id="@+id/tvProductName"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="7dp"
+        android:fontFamily="@font/poppins_thin"
+        android:maxLines="2"
+        android:text="Scotch Premium"
+        android:textColor="@color/black"
+        android:textSize="17sp"
+        android:textStyle="bold" />
 
-        <ImageView
-            android:id="@+id/imageSpecialRvItem"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="10dp"
-             />
 
-        <TextView
-            android:id="@+id/tvSpecialProductName"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:text="Scotch Premium"
-            app:layout_constraintStart_toEndOf="@id/imageSpecialRvItem"
-            app:layout_constraintTop_toTopOf="@id/imageSpecialRvItem"
-            android:layout_marginTop="7dp"
-            android:layout_marginStart="18dp"
-            android:fontFamily="@font/poppins_thin"
-            android:textStyle="bold"
-            android:textColor="@color/black"
-            android:textSize="17sp"
-            android:maxLines="2"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/tvSpecialPrdouctPrice"
-            android:layout_width="80dp"
+            android:id="@+id/tvOfferPercentage"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginRight="10dp"
+            android:fontFamily="@font/sf_pro_display"
+            android:text="60%"
+            android:textColor="@color/g_gray700"
+            android:textSize="14sp" />
+
+        <TextView
+            android:id="@+id/tvProductOriginalPrice"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/sf_pro_display"
             android:text="$1600"
-            app:layout_constraintStart_toStartOf="@id/tvSpecialProductName"
-            app:layout_constraintTop_toBottomOf="@id/tvSpecialProductName"
-            android:textColor="@color/black"
-            android:textSize="12sp"
-            android:fontFamily="@font/sf_pro_display"/>
+            android:textColor="@color/g_gray700"
+            android:textSize="14sp" />
 
-        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
-            android:id="@+id/btn_add_to_cart"
-            android:layout_width="77dp"
-            android:layout_height="25dp"
-            android:fontFamily="@font/poppins_light"
-            android:text="Add to cart"
-            android:textColor="@color/white"
-            android:textSize="10sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvSpecialPrdouctPrice"
-            android:layout_marginTop="10dp"
-            android:textAllCaps="false"
-            />
-
-        <LinearLayout
-            android:layout_width="23dp"
-            android:layout_height="23dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:orientation="vertical">
-            <ImageView
-                android:layout_width="10dp"
-                android:layout_height="10dp"
-                android:src="@drawable/ic_favorite"
-                android:layout_gravity="center"
-                android:layout_marginTop="7dp"
-                />
-        </LinearLayout>
+    </LinearLayout>
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/tvProductRealPrice"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/sf_pro_display"
+        android:text="$1600"
+        android:textColor="@color/g_red"
+        android:textSize="17sp"
+        android:textStyle="bold" />
 
-</androidx.cardview.widget.CardView>
+    <RatingBar
+        android:id="@+id/rating"
+        style="?android:attr/ratingBarStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:isIndicator="true"
+        android:numStars="5"
+        android:stepSize="0.1" />
+
+</LinearLayout>
