--- a/OnlineShopping/app/src/main/res/navigation/shopping_graph.xml
+++ b/OnlineShopping/app/src/main/res/navigation/shopping_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/shopping_graph"
-    app:startDestination="@id/addProductFragment">
+    app:startDestination="@id/homeFragment">
 
     <fragment
         android:id="@+id/cartFragment"
@@ -23,7 +23,11 @@
         android:id="@+id/productDetailsFragment"
         android:name="com.psi.onlineshop.fragments.shopping.ProductDetailsFragment"
         android:label="fragment_product_details"
-        tools:layout="@layout/fragment_product_details" />
+        tools:layout="@layout/fragment_product_details" >
+        <argument
+            android:name="product"
+            app:argType="com.psi.onlineshop.data.Product" />
+    </fragment>
     <fragment
         android:id="@+id/searchFragment"
         android:name="com.psi.onlineshop.fragments.shopping.SearchFragment"
