--- a/OnlineShopping/app/src/main/res/layout/fragment_product_details.xml
+++ b/OnlineShopping/app/src/main/res/layout/fragment_product_details.xml
@@ -1,14 +1,222 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.shopping.ProductDetailsFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".fragments.shopping.ProductDetailsFragment"
+    android:fillViewport="true">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:fillViewport="true"
+        android:id="@+id/nestedScrollMainCategory">
 
-</FrameLayout>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <com.smarteist.autoimageslider.SliderView
+                android:id="@+id/productSliderView"
+                android:layout_width="0dp"
+                android:layout_height="350dp"
+                app:strokeColor="@color/g_gray700"
+                app:strokeWidth="5dp"
+                android:layout_marginTop="5dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_centerInParent="true"
+                app:sliderAnimationDuration="600"
+                app:sliderAutoCycleDirection="back_and_forth"
+                app:sliderIndicatorAnimationDuration="600"
+                app:sliderIndicatorEnabled="true"
+                app:sliderIndicatorGravity="center_horizontal|bottom"
+                app:sliderIndicatorMargin="15dp"
+                app:sliderIndicatorOrientation="horizontal"
+                app:sliderIndicatorPadding="3dp"
+                app:sliderIndicatorRadius="2dp"
+                app:sliderIndicatorSelectedColor="#5A5A5A"
+                app:sliderIndicatorUnselectedColor="#FFF"
+                app:sliderScrollTimeInSec="1"
+                tools:ignore="MissingConstraints"
+                app:cardCornerRadius="15dp"/>
+
+            <RatingBar
+                android:id="@+id/productDetailsRating"
+                style="?android:attr/ratingBarStyleSmall"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:isIndicator="true"
+                android:numStars="5"
+                android:stepSize="0.1"
+                app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
+                app:layout_constraintTop_toBottomOf="@id/productSliderView"/>
+
+            <TextView
+                android:id="@+id/tvProductName"
+                style="@style/h2"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Product name"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
+                app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
+                app:layout_constraintTop_toBottomOf="@id/productDetailsRating" />
+
+            <TextView
+                android:id="@+id/tvProductDescription"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:textColor="@color/g_gray700"
+                app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
+                app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
+                app:layout_constraintTop_toBottomOf="@id/tvProductName"
+                android:textSize="12sp"
+                android:text="Product description"/>
+
+            <LinearLayout
+                android:id="@+id/linePrice"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="20dp"
+                app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
+                app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
+                app:layout_constraintTop_toBottomOf="@id/tvProductDescription" >
+
+                <TextView
+                    android:id="@+id/tvProductOfferPercentage"
+                    style="@style/h2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="14sp"
+                    android:text="20%"
+                    android:layout_marginRight="10dp"
+                    android:textColor="@color/g_gray700" />
+
+                <TextView
+                    android:id="@+id/tvProductPrice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="14sp"
+                    android:text="$6000"
+                    android:textColor="@color/g_gray700" />
+
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/tvProductRealPrice"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="$6000"
+                android:textColor="@color/g_red"
+                android:textSize="17sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@id/linePrice"
+                app:layout_constraintTop_toBottomOf="@id/linePrice" />
+
+            <View
+                android:id="@+id/topLine"
+                android:layout_width="match_parent"
+                android:layout_height="5dp"
+                android:background="@color/g_line"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tvProductRealPrice"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginTop="10dp"/>
+
+
+            <TextView
+                android:id="@+id/tvProductColors"
+                android:textSize="12sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Color:"
+                android:textColor="@color/black"
+
+                app:layout_constraintStart_toEndOf="@id/topLine"
+                app:layout_constraintStart_toStartOf="@id/topLine"
+                app:layout_constraintTop_toBottomOf="@id/topLine" />
+
+            <TextView
+                android:id="@+id/tvProductSelectedColor"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="Red"
+                android:paddingLeft="10dp"
+                android:textColor="@color/black"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="@id/topLine"
+                app:layout_constraintStart_toEndOf="@id/tvProductColors"
+                app:layout_constraintTop_toBottomOf="@id/topLine" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvColors"
+                android:layout_width="0dp"
+                android:layout_height="150dp"
+                app:layout_constraintTop_toBottomOf="@id/tvProductColors"
+                app:layout_constraintStart_toStartOf="@+id/guidelineLoginLeft"
+                app:layout_constraintEnd_toEndOf="@+id/guidelineLoginRight"
+                />
+
+            <TextView
+                android:id="@+id/tvProductSize"
+                android:textSize="12sp"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="Size"
+                android:textColor="@color/black"
+                app:layout_constraintTop_toBottomOf="@id/rvColors"
+                app:layout_constraintStart_toStartOf="@+id/guidelineLoginLeft"
+                app:layout_constraintEnd_toEndOf="@+id/guidelineLoginRight" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_sizes"
+                android:layout_width="0dp"
+                android:layout_height="80dp"
+                app:layout_constraintTop_toBottomOf="@id/tvProductSize"
+                app:layout_constraintStart_toStartOf="@+id/guidelineLoginLeft"
+                app:layout_constraintEnd_toEndOf="@+id/guidelineLoginRight" />
+
+
+            <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
+                android:id="@+id/buttonAddToCart"
+                style="@style/blueButtonStyle"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginBottom="20dp"
+                android:text="Add to cart"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/buttonAddToCart"
+                app:layout_constraintStart_toStartOf="@+id/guidelineLoginLeft"
+                app:layout_constraintEnd_toEndOf="@+id/guidelineLoginRight"
+                app:spinning_bar_color="@color/white" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guidelineLoginLeft"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.03" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guidelineLoginRight"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.97" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.core.widget.NestedScrollView>
+
+</androidx.core.widget.NestedScrollView>
