--- a/OnlineShopping/app/src/main/res/layout/fragment_home.xml
+++ b/OnlineShopping/app/src/main/res/layout/fragment_home.xml
@@ -46,7 +46,7 @@
             android:layout_width="0dp"
             android:layout_height="44dp"
             android:layout_marginTop="10dp"
-            android:background="@drawable/input"
+            android:background="@drawable/reactangle_radius"
             android:queryHint="Enter a product"
             app:defaultQueryHint="Enter a product"
             app:layout_constraintBottom_toTopOf="@+id/sliderView"
