--- a/OnlineShopping/app/src/main/res/values/colors.xml
+++ b/OnlineShopping/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="g_gray700">#666666</color>
     <color name="g_black">#171717</color>
     <color name="g_blue">#000DAE</color>
+    <color name="l_blue">#0000FF</color>
     <color name="g_white">#F5F8FA</color>
     <color name="g_dark_blue">#000759</color>
     <color name="g_blue_gray200">#97AABD</color>
