--- a/OnlineShopping/app/src/main/res/layout/fragment_product_details.xml
+++ b/OnlineShopping/app/src/main/res/layout/fragment_product_details.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,16 +8,43 @@
     android:fillViewport="true">
 
 
+    <!-- Toolbar -->
+    <com.google.android.material.appbar.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/white"
+            app:title=" "
+            app:menu="@menu/product_details_top_menu"
+            app:titleTextColor="@android:color/white"
+            app:layout_constraintTop_toTopOf="parent"
+            app:navigationIcon="@drawable/ic_back" />
+
+        <View
+            android:id="@+id/divider"
+            android:layout_width="match_parent"
+            android:layout_height="3dp"
+            android:background="@color/g_gray200" />
+
+    </com.google.android.material.appbar.AppBarLayout>
+
+
+
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true"
+        android:layout_marginBottom="50dp"
         android:id="@+id/nestedScrollMainCategory">
+
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-
             <com.smarteist.autoimageslider.SliderView
                 android:id="@+id/productSliderView"
                 android:layout_width="0dp"
@@ -142,20 +169,23 @@
 
             <TextView
                 android:id="@+id/tvProductSelectedColor"
-                android:layout_width="0dp"
+                android:layout_width="20dp"
                 android:layout_height="wrap_content"
-                android:text="Red"
-                android:paddingLeft="10dp"
+                android:background="@drawable/rounded_corner_background"
+                android:layout_marginLeft="10dp"
                 android:textColor="@color/black"
+                android:backgroundTint="@color/white"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="@id/topLine"
                 app:layout_constraintStart_toEndOf="@id/tvProductColors"
                 app:layout_constraintTop_toBottomOf="@id/topLine" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rvColors"
                 android:layout_width="0dp"
-                android:layout_height="150dp"
+                android:layout_height="wrap_content"
+                android:scrollbarSize="5dp"
+                android:scrollbarStyle="outsideInset"
+                android:scrollbars="horizontal"
                 app:layout_constraintTop_toBottomOf="@id/tvProductColors"
                 app:layout_constraintStart_toStartOf="@+id/guidelineLoginLeft"
                 app:layout_constraintEnd_toEndOf="@+id/guidelineLoginRight"
@@ -176,11 +206,10 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="S"
+                android:text=""
                 android:paddingLeft="10dp"
                 android:textColor="@color/black"
                 android:textStyle="bold"
-
                 app:layout_constraintEnd_toEndOf="@id/rvColors"
                 app:layout_constraintStart_toEndOf="@id/tvProductSize"
                 app:layout_constraintTop_toBottomOf="@id/rvColors" />
@@ -207,6 +236,7 @@
                 app:layout_constraintEnd_toEndOf="@+id/guidelineLoginRight"
                 app:spinning_bar_color="@color/white" />
 
+
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guidelineLoginLeft"
                 android:layout_width="wrap_content"
@@ -226,4 +256,25 @@
 
     </androidx.core.widget.NestedScrollView>
 
-</androidx.core.widget.NestedScrollView>
+
+    <View
+        android:id="@+id/bottom_border"
+        android:layout_width="match_parent"
+        android:layout_height="3dp"
+        android:background="@color/g_gray200"
+        app:layout_anchor="@id/bottom_navigation_product_details"
+        app:layout_anchorGravity="top" />
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation_product_details"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        app:labelVisibilityMode="unlabeled"
+        app:elevation="0dp"
+        android:visibility="visible"
+        app:menu="@menu/product_details_bottom_menu"
+        app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior"
+        android:layout_gravity="bottom"/>
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
