--- a/OnlineShopping/app/src/main/res/layout/product_color_item.xml
+++ b/OnlineShopping/app/src/main/res/layout/product_color_item.xml
@@ -1,37 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="165dp"
+    android:orientation="vertical"
+    android:id="@+id/rvColorItem"
+    android:background="@drawable/reactangle_radius_black">
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/imageShadow"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:src="#B8D9FA"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:visibility="invisible"/>
-
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/imageColor"
-        android:layout_width="21dp"
-        android:layout_height="21dp"
-        android:src="@color/g_blue"
-        app:layout_constraintStart_toStartOf="@id/imageShadow"
-        app:layout_constraintTop_toTopOf="@id/imageShadow"
-        app:layout_constraintEnd_toEndOf="@id/imageShadow"
-        app:layout_constraintBottom_toBottomOf="@id/imageShadow"/>
 
     <ImageView
-        android:id="@+id/imagePicked"
-        android:layout_width="18sp"
-        android:layout_height="18sp"
-        android:src="@drawable/ic_picked"
-        app:layout_constraintStart_toStartOf="@id/imageColor"
-        app:layout_constraintTop_toTopOf="@id/imageColor"
-        app:layout_constraintBottom_toBottomOf="@id/imageColor"
-        android:visibility="invisible"
-        app:layout_constraintEnd_toEndOf="@id/imageColor" />
+        android:id="@+id/imageProduct"
+        android:layout_width="120dp"
+        android:layout_height="120dp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/tvColor"
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:layout_marginTop="7dp"
+        android:maxLines="1"
+        android:text="Scotch Premium"
+        android:background="@color/g_red"
+        android:textSize="17sp"
+        android:textStyle="bold" />
+
+</LinearLayout>
