--- a/OnlineShopping/app/src/main/res/layout/product_size_item.xml
+++ b/OnlineShopping/app/src/main/res/layout/product_size_item.xml
@@ -7,10 +7,13 @@
         android:id="@+id/tvSize"
         android:layout_width="40dp"
         android:layout_height="40dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="5dp"
+        android:background="@drawable/reactangle_radius_black"
         android:text="S"
         android:textAlignment="center"
-        android:layout_margin="5dp"
-        android:textColor="@color/black"
-        android:background="@drawable/reactangle_radius_black"/>
+        android:textColor="@color/black" />
 
 </RelativeLayout>
