--- a/OnlineShopping/app/src/main/res/navigation/shopping_graph.xml
+++ b/OnlineShopping/app/src/main/res/navigation/shopping_graph.xml
@@ -27,6 +27,15 @@
         <argument
             android:name="product"
             app:argType="com.psi.onlineshop.data.Product" />
+        <action
+            android:id="@+id/action_productDetailsFragment_to_searchFragment"
+            app:destination="@id/searchFragment" />
+        <action
+            android:id="@+id/action_productDetailsFragment_to_cartFragment"
+            app:destination="@id/cartFragment" />
+        <action
+            android:id="@+id/action_productDetailsFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
     </fragment>
     <fragment
         android:id="@+id/searchFragment"
