--- a/OnlineShopping/app/src/main/res/values/colors.xml
+++ b/OnlineShopping/app/src/main/res/values/colors.xml
@@ -12,6 +12,8 @@
     <color name="g_black">#171717</color>
     <color name="g_blue">#000DAE</color>
     <color name="l_blue">#0000FF</color>
+    <color name="l_blue_200">#3498DB</color>
+
     <color name="g_white">#F5F8FA</color>
     <color name="g_dark_blue">#000759</color>
     <color name="g_blue_gray200">#97AABD</color>
@@ -25,5 +27,6 @@
     <color name="g_orange_yellow">#F8BA00</color>
     <color name="g_green">#11FF00</color>
     <color name="g_gray200"> #F2F3F4</color>
+    <color name="l_orange">#F0B27A</color>
 
 </resources>
